src/test/ui/higher-rank-trait-bounds/issue-59311.stderr
error: higher-ranked subtype error
  --> $DIR/issue-59311.rs:17:9
   |
LL |     v.t(|| {});
   |         ^^^^^

error: aborting due to previous error

